@@ -1,3 +1,10 @@
+2012-11-23  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* sysdeps/m68k/dl-trampoline.S (_dl_runtime_profile)
+	[__mcoldfire__]: Fix copying loop.
+
+	* sysdeps/m68k/sotruss-lib.c: New file.
+
 2012-11-21  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* sysdeps/unix/sysv/linux/m68k/nptl/lowlevellock.h
